--- a/locale/de/foreman_setup.po
+++ b/locale/de/foreman_setup.po
@@ -1,42 +1,49 @@
 # foreman_setup
-#
+# 
 # This file is distributed under the same license as foreman_setup.
-#
-#, fuzzy
+# 
+# Translators:
+# Ettore Atalan <atalanttore@googlemail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_setup 2.0.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-08-20 09:25+0100\n"
-"PO-Revision-Date: 2014-08-20 09:27+0100\n"
-"Last-Translator: Dominic Cleal <dcleal@redhat.com>\n"
-"Language-Team: Foreman Team <foreman-dev@googlegroups.com>\n"
-"Language: \n"
+"PO-Revision-Date: 2014-09-12 14:40+0000\n"
+"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
+"Language-Team: German (http://www.transifex.com/projects/p/foreman/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: de\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Activation key"
-msgstr ""
+msgstr "Aktivierungsschlüssel"
 
 msgid "Activation key configuration"
-msgstr ""
+msgstr "Aktivierungsschlüsselkonfiguration"
 
 msgid "Add and manage compute resources (virtualization and cloud)"
 msgstr ""
 
-msgid "All of the necessary components have been set up for provisioning support.  You can now provision new hosts by registering them from the Hosts page, then PXE-boot the server on the subnet set up earlier."
+msgid ""
+"All of the necessary components have been set up for provisioning support.  "
+"You can now provision new hosts by registering them from the Hosts page, "
+"then PXE-boot the server on the subnet set up earlier."
 msgstr ""
 
-msgid "All of the necessary network information has been collected, now run the Foreman installer again with the necessary arguments to configure provisioning."
+msgid ""
+"All of the necessary network information has been collected, now run the "
+"Foreman installer again with the necessary arguments to configure "
+"provisioning."
 msgstr ""
 
 msgid "Completion"
 msgstr ""
 
 msgid "Compute Resources"
-msgstr ""
+msgstr "Rechnerresource"
 
 msgid "Create and provision a new host"
 msgstr ""
@@ -45,22 +52,22 @@ msgid "Create new installation medium"
 msgstr ""
 
 msgid "Delete %s?"
-msgstr ""
+msgstr "%s löschen?"
 
 msgid "Domain"
-msgstr ""
+msgstr "Domäne"
 
 msgid "Domain|Name"
-msgstr ""
+msgstr "Name"
 
 msgid "Edit Host Group"
-msgstr ""
+msgstr "Hostgruppe bearbeiten"
 
 msgid "Existing medium"
-msgstr ""
+msgstr "Vorhandenes Medium"
 
 msgid "Foreman installer"
-msgstr ""
+msgstr "Foreman-Installationsprogramm"
 
 msgid "Found registered host %s"
 msgstr ""
@@ -72,9 +79,12 @@ msgid "Host %s has at least one network interface"
 msgstr ""
 
 msgid "Hostname"
-msgstr ""
+msgstr "Hostname"
 
-msgid "If installation media has already been set up, it can be selected below and the wizard will complete the necessary associations.  Otherwise use the fields below, or the Installation Media page in Foreman to add new media."
+msgid ""
+"If installation media has already been set up, it can be selected below and "
+"the wizard will complete the necessary associations.  Otherwise use the "
+"fields below, or the Installation Media page in Foreman to add new media."
 msgstr ""
 
 msgid "Install provisioning with DHCP"
@@ -84,7 +94,7 @@ msgid "Install provisioning without DHCP"
 msgstr ""
 
 msgid "Installation media"
-msgstr ""
+msgstr "Installationsmedien"
 
 msgid "Missing registered host %s, please ensure it is checking in"
 msgstr ""
@@ -93,19 +103,19 @@ msgid "Missing registered smart proxy %s, please ensure it is registered"
 msgstr ""
 
 msgid "Network config"
-msgstr ""
+msgstr "Netzwerkkonfiguration"
 
 msgid "Network selection"
-msgstr ""
+msgstr "Netzwerkauswahl"
 
 msgid "New Host"
-msgstr ""
+msgstr "Neuer Host"
 
 msgid "Next"
-msgstr ""
+msgstr "Weiter"
 
 msgid "Next steps"
-msgstr ""
+msgstr "Nächste Schritte"
 
 msgid "No network interfaces listed in $interfaces fact"
 msgstr ""
@@ -117,10 +127,10 @@ msgid "Not available until pre-requisites satisified."
 msgstr ""
 
 msgid "Operating system"
-msgstr ""
+msgstr "Betriebssystem"
 
 msgid "Path or URL"
-msgstr ""
+msgstr "Pfad oder URL"
 
 msgid "Plugin for Foreman that helps set up provisioning."
 msgstr ""
@@ -132,7 +142,7 @@ msgid "Provision from %s"
 msgstr ""
 
 msgid "Provisioning Setup"
-msgstr ""
+msgstr "Bereitstellungs-Setup"
 
 msgid "Provisioning host"
 msgstr ""
@@ -159,16 +169,18 @@ msgid "Set up provisioning"
 msgstr ""
 
 msgid "Smart proxy"
-msgstr ""
+msgstr "Smart Proxy"
 
-msgid "Some information about the location of installation media for the operating system used for provisioning is now required."
+msgid ""
+"Some information about the location of installation media for the operating "
+"system used for provisioning is now required."
 msgstr ""
 
 msgid "Spacewalk hostname is missing"
-msgstr ""
+msgstr "Spacewalk-Hostname fehlt"
 
 msgid "Subnet"
-msgstr ""
+msgstr "Subnetz"
 
 msgid "Successfully associated OS %s."
 msgstr ""
@@ -179,23 +191,33 @@ msgstr ""
 msgid "The DNS domain name to provision hosts into"
 msgstr ""
 
-msgid "The configuration set up is all accessible under the Infrastructure menu, e.g. Infrastructure > Subnets, and can be changed in the web interface.  You can return to this set up process through <b>Infrastructure > Provisioning Setup</b> to change settings or add new provisioning capabilities."
+msgid ""
+"The configuration set up is all accessible under the Infrastructure menu, "
+"e.g. Infrastructure > Subnets, and can be changed in the web interface.  You"
+" can return to this set up process through <b>Infrastructure > Provisioning "
+"Setup</b> to change settings or add new provisioning capabilities."
 msgstr ""
 
 msgid "The following operating system will be configured for provisioning:"
 msgstr ""
 
-msgid "This wizard will help set up Foreman for full host provisioning.  Before we begin, a few requirements will be verified."
+msgid ""
+"This wizard will help set up Foreman for full host provisioning.  Before we "
+"begin, a few requirements will be verified."
 msgstr ""
 
-msgid "To provision hosts, some configuration values are needed for the provisioning subnet attached to the Foreman server."
+msgid ""
+"To provision hosts, some configuration values are needed for the "
+"provisioning subnet attached to the Foreman server."
 msgstr ""
 
 msgid "Type"
-msgstr ""
+msgstr "Typ"
 
 msgid "Use an existing installation medium"
 msgstr ""
 
-msgid "Users of Spacewalk, Red Hat Network, or Red Hat Satellite 5 should enter an appropriate activation key below, otherwise leave blank."
+msgid ""
+"Users of Spacewalk, Red Hat Network, or Red Hat Satellite 5 should enter an "
+"appropriate activation key below, otherwise leave blank."
 msgstr ""
