--- a/locale/pt_BR/foreman_setup.po
+++ b/locale/pt_BR/foreman_setup.po
@@ -1,21 +1,21 @@
 # foreman_setup
-#
+# 
 # This file is distributed under the same license as foreman_setup.
-#
-#, fuzzy
+# 
+# Translators:
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_setup 2.0.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-08-20 09:25+0100\n"
-"PO-Revision-Date: 2014-08-20 09:27+0100\n"
+"PO-Revision-Date: 2014-08-20 08:30+0000\n"
 "Last-Translator: Dominic Cleal <dcleal@redhat.com>\n"
-"Language-Team: Foreman Team <foreman-dev@googlegroups.com>\n"
-"Language: \n"
+"Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/foreman/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: pt_BR\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 msgid "Activation key"
 msgstr ""
@@ -26,17 +26,23 @@ msgstr ""
 msgid "Add and manage compute resources (virtualization and cloud)"
 msgstr ""
 
-msgid "All of the necessary components have been set up for provisioning support.  You can now provision new hosts by registering them from the Hosts page, then PXE-boot the server on the subnet set up earlier."
+msgid ""
+"All of the necessary components have been set up for provisioning support.  "
+"You can now provision new hosts by registering them from the Hosts page, "
+"then PXE-boot the server on the subnet set up earlier."
 msgstr ""
 
-msgid "All of the necessary network information has been collected, now run the Foreman installer again with the necessary arguments to configure provisioning."
+msgid ""
+"All of the necessary network information has been collected, now run the "
+"Foreman installer again with the necessary arguments to configure "
+"provisioning."
 msgstr ""
 
 msgid "Completion"
 msgstr ""
 
 msgid "Compute Resources"
-msgstr ""
+msgstr "Recursos de computação"
 
 msgid "Create and provision a new host"
 msgstr ""
@@ -45,13 +51,13 @@ msgid "Create new installation medium"
 msgstr ""
 
 msgid "Delete %s?"
-msgstr ""
+msgstr "Apagar %s"
 
 msgid "Domain"
-msgstr ""
+msgstr "Domínio"
 
 msgid "Domain|Name"
-msgstr ""
+msgstr "DNS domain"
 
 msgid "Edit Host Group"
 msgstr ""
@@ -74,7 +80,10 @@ msgstr ""
 msgid "Hostname"
 msgstr ""
 
-msgid "If installation media has already been set up, it can be selected below and the wizard will complete the necessary associations.  Otherwise use the fields below, or the Installation Media page in Foreman to add new media."
+msgid ""
+"If installation media has already been set up, it can be selected below and "
+"the wizard will complete the necessary associations.  Otherwise use the "
+"fields below, or the Installation Media page in Foreman to add new media."
 msgstr ""
 
 msgid "Install provisioning with DHCP"
@@ -84,7 +93,7 @@ msgid "Install provisioning without DHCP"
 msgstr ""
 
 msgid "Installation media"
-msgstr ""
+msgstr "Meio de instalação"
 
 msgid "Missing registered host %s, please ensure it is checking in"
 msgstr ""
@@ -99,7 +108,7 @@ msgid "Network selection"
 msgstr ""
 
 msgid "New Host"
-msgstr ""
+msgstr "Novo host"
 
 msgid "Next"
 msgstr ""
@@ -117,7 +126,7 @@ msgid "Not available until pre-requisites satisified."
 msgstr ""
 
 msgid "Operating system"
-msgstr ""
+msgstr "Sistema Operacional"
 
 msgid "Path or URL"
 msgstr ""
@@ -132,7 +141,7 @@ msgid "Provision from %s"
 msgstr ""
 
 msgid "Provisioning Setup"
-msgstr ""
+msgstr "Configuração de Provisionamento"
 
 msgid "Provisioning host"
 msgstr ""
@@ -159,16 +168,18 @@ msgid "Set up provisioning"
 msgstr ""
 
 msgid "Smart proxy"
-msgstr ""
+msgstr "Smart proxy"
 
-msgid "Some information about the location of installation media for the operating system used for provisioning is now required."
+msgid ""
+"Some information about the location of installation media for the operating "
+"system used for provisioning is now required."
 msgstr ""
 
 msgid "Spacewalk hostname is missing"
 msgstr ""
 
 msgid "Subnet"
-msgstr ""
+msgstr "Suberede"
 
 msgid "Successfully associated OS %s."
 msgstr ""
@@ -179,23 +190,33 @@ msgstr ""
 msgid "The DNS domain name to provision hosts into"
 msgstr ""
 
-msgid "The configuration set up is all accessible under the Infrastructure menu, e.g. Infrastructure > Subnets, and can be changed in the web interface.  You can return to this set up process through <b>Infrastructure > Provisioning Setup</b> to change settings or add new provisioning capabilities."
+msgid ""
+"The configuration set up is all accessible under the Infrastructure menu, "
+"e.g. Infrastructure > Subnets, and can be changed in the web interface.  You"
+" can return to this set up process through <b>Infrastructure > Provisioning "
+"Setup</b> to change settings or add new provisioning capabilities."
 msgstr ""
 
 msgid "The following operating system will be configured for provisioning:"
 msgstr ""
 
-msgid "This wizard will help set up Foreman for full host provisioning.  Before we begin, a few requirements will be verified."
+msgid ""
+"This wizard will help set up Foreman for full host provisioning.  Before we "
+"begin, a few requirements will be verified."
 msgstr ""
 
-msgid "To provision hosts, some configuration values are needed for the provisioning subnet attached to the Foreman server."
+msgid ""
+"To provision hosts, some configuration values are needed for the "
+"provisioning subnet attached to the Foreman server."
 msgstr ""
 
 msgid "Type"
-msgstr ""
+msgstr "Tipo"
 
 msgid "Use an existing installation medium"
 msgstr ""
 
-msgid "Users of Spacewalk, Red Hat Network, or Red Hat Satellite 5 should enter an appropriate activation key below, otherwise leave blank."
+msgid ""
+"Users of Spacewalk, Red Hat Network, or Red Hat Satellite 5 should enter an "
+"appropriate activation key below, otherwise leave blank."
 msgstr ""
