--- a/locale/sv_SE/foreman_setup.po
+++ b/locale/sv_SE/foreman_setup.po
@@ -1,42 +1,49 @@
 # foreman_setup
-#
+# 
 # This file is distributed under the same license as foreman_setup.
-#
-#, fuzzy
+# 
+# Translators:
+# johnny.westerlund <johnny.westerlund@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_setup 2.0.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-08-20 09:25+0100\n"
-"PO-Revision-Date: 2014-08-20 09:27+0100\n"
-"Last-Translator: Dominic Cleal <dcleal@redhat.com>\n"
-"Language-Team: Foreman Team <foreman-dev@googlegroups.com>\n"
-"Language: \n"
+"PO-Revision-Date: 2014-09-16 13:31+0000\n"
+"Last-Translator: johnny.westerlund <johnny.westerlund@gmail.com>\n"
+"Language-Team: Swedish (Sweden) (http://www.transifex.com/projects/p/foreman/language/sv_SE/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: sv_SE\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Activation key"
-msgstr ""
+msgstr "Aktiveringsnyckel"
 
 msgid "Activation key configuration"
-msgstr ""
+msgstr "Konfiguration för aktiveringsnyckel"
 
 msgid "Add and manage compute resources (virtualization and cloud)"
-msgstr ""
+msgstr "Addera och hantera beräkningsresurser (virtualisering och måln)"
 
-msgid "All of the necessary components have been set up for provisioning support.  You can now provision new hosts by registering them from the Hosts page, then PXE-boot the server on the subnet set up earlier."
-msgstr ""
+msgid ""
+"All of the necessary components have been set up for provisioning support.  "
+"You can now provision new hosts by registering them from the Hosts page, "
+"then PXE-boot the server on the subnet set up earlier."
+msgstr "Alla nödvändiga komponenter har konfigurerats för att möjliggöra provisionering. Du kan nu provisionera nya värdar genom att registrera dom från Värd-sidan, för att efter PXE-starta servern på det konfigurerade subnätet."
 
-msgid "All of the necessary network information has been collected, now run the Foreman installer again with the necessary arguments to configure provisioning."
+msgid ""
+"All of the necessary network information has been collected, now run the "
+"Foreman installer again with the necessary arguments to configure "
+"provisioning."
 msgstr ""
 
 msgid "Completion"
 msgstr ""
 
 msgid "Compute Resources"
-msgstr ""
+msgstr "Beräkningsresurser"
 
 msgid "Create and provision a new host"
 msgstr ""
@@ -45,13 +52,13 @@ msgid "Create new installation medium"
 msgstr ""
 
 msgid "Delete %s?"
-msgstr ""
+msgstr "Radera %s"
 
 msgid "Domain"
-msgstr ""
+msgstr "Domän"
 
 msgid "Domain|Name"
-msgstr ""
+msgstr "Namn"
 
 msgid "Edit Host Group"
 msgstr ""
@@ -74,7 +81,10 @@ msgstr ""
 msgid "Hostname"
 msgstr ""
 
-msgid "If installation media has already been set up, it can be selected below and the wizard will complete the necessary associations.  Otherwise use the fields below, or the Installation Media page in Foreman to add new media."
+msgid ""
+"If installation media has already been set up, it can be selected below and "
+"the wizard will complete the necessary associations.  Otherwise use the "
+"fields below, or the Installation Media page in Foreman to add new media."
 msgstr ""
 
 msgid "Install provisioning with DHCP"
@@ -84,7 +94,7 @@ msgid "Install provisioning without DHCP"
 msgstr ""
 
 msgid "Installation media"
-msgstr ""
+msgstr "Installationsmedia"
 
 msgid "Missing registered host %s, please ensure it is checking in"
 msgstr ""
@@ -99,7 +109,7 @@ msgid "Network selection"
 msgstr ""
 
 msgid "New Host"
-msgstr ""
+msgstr "Ny Värd"
 
 msgid "Next"
 msgstr ""
@@ -117,7 +127,7 @@ msgid "Not available until pre-requisites satisified."
 msgstr ""
 
 msgid "Operating system"
-msgstr ""
+msgstr "Operativsystem"
 
 msgid "Path or URL"
 msgstr ""
@@ -132,7 +142,7 @@ msgid "Provision from %s"
 msgstr ""
 
 msgid "Provisioning Setup"
-msgstr ""
+msgstr "Provisioneringsuppläggning"
 
 msgid "Provisioning host"
 msgstr ""
@@ -159,16 +169,18 @@ msgid "Set up provisioning"
 msgstr ""
 
 msgid "Smart proxy"
-msgstr ""
+msgstr "Smart proxy"
 
-msgid "Some information about the location of installation media for the operating system used for provisioning is now required."
+msgid ""
+"Some information about the location of installation media for the operating "
+"system used for provisioning is now required."
 msgstr ""
 
 msgid "Spacewalk hostname is missing"
 msgstr ""
 
 msgid "Subnet"
-msgstr ""
+msgstr "Subnät"
 
 msgid "Successfully associated OS %s."
 msgstr ""
@@ -179,23 +191,33 @@ msgstr ""
 msgid "The DNS domain name to provision hosts into"
 msgstr ""
 
-msgid "The configuration set up is all accessible under the Infrastructure menu, e.g. Infrastructure > Subnets, and can be changed in the web interface.  You can return to this set up process through <b>Infrastructure > Provisioning Setup</b> to change settings or add new provisioning capabilities."
+msgid ""
+"The configuration set up is all accessible under the Infrastructure menu, "
+"e.g. Infrastructure > Subnets, and can be changed in the web interface.  You"
+" can return to this set up process through <b>Infrastructure > Provisioning "
+"Setup</b> to change settings or add new provisioning capabilities."
 msgstr ""
 
 msgid "The following operating system will be configured for provisioning:"
 msgstr ""
 
-msgid "This wizard will help set up Foreman for full host provisioning.  Before we begin, a few requirements will be verified."
+msgid ""
+"This wizard will help set up Foreman for full host provisioning.  Before we "
+"begin, a few requirements will be verified."
 msgstr ""
 
-msgid "To provision hosts, some configuration values are needed for the provisioning subnet attached to the Foreman server."
+msgid ""
+"To provision hosts, some configuration values are needed for the "
+"provisioning subnet attached to the Foreman server."
 msgstr ""
 
 msgid "Type"
-msgstr ""
+msgstr "Typ"
 
 msgid "Use an existing installation medium"
 msgstr ""
 
-msgid "Users of Spacewalk, Red Hat Network, or Red Hat Satellite 5 should enter an appropriate activation key below, otherwise leave blank."
+msgid ""
+"Users of Spacewalk, Red Hat Network, or Red Hat Satellite 5 should enter an "
+"appropriate activation key below, otherwise leave blank."
 msgstr ""
