--- a/locale/es/foreman_setup.po
+++ b/locale/es/foreman_setup.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as foreman_setup.
 # 
 # Translators:
-# Sergio Ocón <sergio@redhat.com>, 2014
+# Sergio Ocón <sergio.ocon@redhat.com>, 2014
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_setup 2.0.4\n"
+"Project-Id-Version: foreman_setup 2.1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-08-20 09:25+0100\n"
 "PO-Revision-Date: 2014-08-29 11:01+0000\n"
-"Last-Translator: Sergio Ocón <sergio@redhat.com>\n"
+"Last-Translator: Sergio Ocón <sergio.ocon@redhat.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/foreman/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
