--- a/locale/ca/foreman_setup.po
+++ b/locale/ca/foreman_setup.po
@@ -6,7 +6,7 @@
 # Robert Antoni Buj i Gelonch <rbuj@fedoraproject.org>, 2015
 msgid ""
 msgstr ""
-"Project-Id-Version: Foreman\n"
+"Project-Id-Version: foreman_setup 3.0.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-08-20 09:25+0100\n"
 "PO-Revision-Date: 2015-12-08 12:35+0000\n"
