--- a/locale/en_GB/foreman_setup.po
+++ b/locale/en_GB/foreman_setup.po
@@ -3,15 +3,16 @@
 # This file is distributed under the same license as foreman_setup.
 # 
 # Translators:
-# Dominic Cleal <dcleal@redhat.com>, 2014
+# Andi Chandler <andi@gowling.com>, 2015
+# Dominic Cleal <dominic@cleal.org>, 2014
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_setup 2.1.0\n"
+"Project-Id-Version: foreman_setup 3.0.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-08-20 09:25+0100\n"
-"PO-Revision-Date: 2014-08-20 08:51+0000\n"
-"Last-Translator: Dominic Cleal <dcleal@redhat.com>\n"
-"Language-Team: English (United Kingdom) (http://www.transifex.com/projects/p/foreman/language/en_GB/)\n"
+"PO-Revision-Date: 2015-05-04 01:21+0000\n"
+"Last-Translator: Andi Chandler <andi@gowling.com>\n"
+"Language-Team: English (United Kingdom) (http://www.transifex.com/foreman/foreman/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,10 +20,10 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Activation key"
-msgstr ""
+msgstr "Activation key"
 
 msgid "Activation key configuration"
-msgstr ""
+msgstr "Activation key configuration"
 
 msgid "Add and manage compute resources (virtualization and cloud)"
 msgstr "Add and manage compute resources (virtualisation and cloud)"
@@ -31,193 +32,193 @@ msgid ""
 "All of the necessary components have been set up for provisioning support.  "
 "You can now provision new hosts by registering them from the Hosts page, "
 "then PXE-boot the server on the subnet set up earlier."
-msgstr ""
+msgstr "All of the necessary components have been set up for provisioning support.  You can now provision new hosts by registering them from the Hosts page, then PXE-boot the server on the subnet set up earlier."
 
 msgid ""
 "All of the necessary network information has been collected, now run the "
 "Foreman installer again with the necessary arguments to configure "
 "provisioning."
-msgstr ""
+msgstr "All of the necessary network information has been collected, now run the Foreman installer again with the necessary arguments to configure provisioning."
 
 msgid "Completion"
-msgstr ""
+msgstr "Completion"
 
 msgid "Compute Resources"
-msgstr ""
+msgstr "Compute Resources"
 
 msgid "Create and provision a new host"
-msgstr ""
+msgstr "Create and provision a new host"
 
 msgid "Create new installation medium"
-msgstr ""
+msgstr "Create new installation medium"
 
 msgid "Delete %s?"
 msgstr "Delete %s?"
 
 msgid "Domain"
-msgstr ""
+msgstr "Domain"
 
 msgid "Domain|Name"
 msgstr "DNS domain"
 
 msgid "Edit Host Group"
-msgstr ""
+msgstr "Edit Host Group"
 
 msgid "Existing medium"
-msgstr ""
+msgstr "Existing medium"
 
 msgid "Foreman installer"
-msgstr ""
+msgstr "Foreman installer"
 
 msgid "Found registered host %s"
-msgstr ""
+msgstr "Found registered host %s"
 
 msgid "Found registered smart proxy %s"
-msgstr ""
+msgstr "Found registered smart proxy %s"
 
 msgid "Host %s has at least one network interface"
-msgstr ""
+msgstr "Host %s has at least one network interface"
 
 msgid "Hostname"
-msgstr ""
+msgstr "Hostname"
 
 msgid ""
 "If installation media has already been set up, it can be selected below and "
 "the wizard will complete the necessary associations.  Otherwise use the "
 "fields below, or the Installation Media page in Foreman to add new media."
-msgstr ""
+msgstr "If installation media has already been set up, it can be selected below and the wizard will complete the necessary associations.  Otherwise use the fields below, or the Installation Media page in Foreman to add new media."
 
 msgid "Install provisioning with DHCP"
-msgstr ""
+msgstr "Install provisioning with DHCP"
 
 msgid "Install provisioning without DHCP"
-msgstr ""
+msgstr "Install provisioning without DHCP"
 
 msgid "Installation media"
-msgstr ""
+msgstr "Installation media"
 
 msgid "Missing registered host %s, please ensure it is checking in"
-msgstr ""
+msgstr "Missing registered host %s, please ensure it is checking in"
 
 msgid "Missing registered smart proxy %s, please ensure it is registered"
-msgstr ""
+msgstr "Missing registered smart proxy %s, please ensure it is registered"
 
 msgid "Network config"
-msgstr ""
+msgstr "Network config"
 
 msgid "Network selection"
-msgstr ""
+msgstr "Network selection"
 
 msgid "New Host"
-msgstr ""
+msgstr "New Host"
 
 msgid "Next"
-msgstr ""
+msgstr "Next"
 
 msgid "Next steps"
-msgstr ""
+msgstr "Next steps"
 
 msgid "No network interfaces listed in $interfaces fact"
-msgstr ""
+msgstr "No network interfaces listed in $interfaces fact"
 
 msgid "Normal installation media"
-msgstr ""
+msgstr "Normal installation media"
 
 msgid "Not available until pre-requisites satisified."
-msgstr ""
+msgstr "Not available until pre-requisites satisified."
 
 msgid "Operating system"
-msgstr ""
+msgstr "Operating system"
 
 msgid "Path or URL"
-msgstr ""
+msgstr "Path or URL"
 
 msgid "Plugin for Foreman that helps set up provisioning."
-msgstr ""
+msgstr "Plugin for Foreman that helps set up provisioning."
 
 msgid "Pre-requisites"
-msgstr ""
+msgstr "Pre-requisites"
 
 msgid "Provision from %s"
-msgstr ""
+msgstr "Provision from %s"
 
 msgid "Provisioning Setup"
-msgstr ""
+msgstr "Provisioning Setup"
 
 msgid "Provisioning host"
-msgstr ""
+msgstr "Provisioning host"
 
 msgid "Provisioning network"
-msgstr ""
+msgstr "Provisioning network"
 
 msgid "Provisioning setup"
-msgstr ""
+msgstr "Provisioning setup"
 
 msgid "Provisioning setup complete"
-msgstr ""
+msgstr "Provisioning setup complete"
 
 msgid "Red Hat Satellite 5 or Spacewalk"
-msgstr ""
+msgstr "Red Hat Satellite 5 or Spacewalk"
 
 msgid "Return to the main provisioning setup page"
-msgstr ""
+msgstr "Return to the main provisioning setup page"
 
 msgid "Review and edit the host group set up by the provisioning wizard"
-msgstr ""
+msgstr "Review and edit the host group set up by the provisioning wizard"
 
 msgid "Set up provisioning"
-msgstr ""
+msgstr "Set up provisioning"
 
 msgid "Smart proxy"
-msgstr ""
+msgstr "Smart proxy"
 
 msgid ""
 "Some information about the location of installation media for the operating "
 "system used for provisioning is now required."
-msgstr ""
+msgstr "Some information about the location of installation media for the operating system used for provisioning is now required."
 
 msgid "Spacewalk hostname is missing"
-msgstr ""
+msgstr "Spacewalk hostname is missing"
 
 msgid "Subnet"
 msgstr "Subnet"
 
 msgid "Successfully associated OS %s."
-msgstr ""
+msgstr "Successfully associated OS %s."
 
 msgid "Successfully updated subnet %s."
-msgstr ""
+msgstr "Successfully updated subnet %s."
 
 msgid "The DNS domain name to provision hosts into"
-msgstr ""
+msgstr "The DNS domain name to provision hosts into"
 
 msgid ""
 "The configuration set up is all accessible under the Infrastructure menu, "
 "e.g. Infrastructure > Subnets, and can be changed in the web interface.  You"
 " can return to this set up process through <b>Infrastructure > Provisioning "
 "Setup</b> to change settings or add new provisioning capabilities."
-msgstr ""
+msgstr "The configuration set up is all accessible under the Infrastructure menu, e.g. Infrastructure > Subnets, and can be changed in the web interface.  You can return to this set up process through <b>Infrastructure > Provisioning Setup</b> to change settings or add new provisioning capabilities."
 
 msgid "The following operating system will be configured for provisioning:"
-msgstr ""
+msgstr "The following operating system will be configured for provisioning:"
 
 msgid ""
 "This wizard will help set up Foreman for full host provisioning.  Before we "
 "begin, a few requirements will be verified."
-msgstr ""
+msgstr "This wizard will help set up Foreman for full host provisioning.  Before we begin, a few requirements will be verified."
 
 msgid ""
 "To provision hosts, some configuration values are needed for the "
 "provisioning subnet attached to the Foreman server."
-msgstr ""
+msgstr "To provision hosts, some configuration values are needed for the provisioning subnet attached to the Foreman server."
 
 msgid "Type"
-msgstr ""
+msgstr "Type"
 
 msgid "Use an existing installation medium"
-msgstr ""
+msgstr "Use an existing installation medium"
 
 msgid ""
 "Users of Spacewalk, Red Hat Network, or Red Hat Satellite 5 should enter an "
 "appropriate activation key below, otherwise leave blank."
-msgstr ""
+msgstr "Users of Spacewalk, Red Hat Network, or Red Hat Satellite 5 should enter an appropriate activation key below, otherwise leave blank."
