--- a/locale/ko/foreman_setup.po
+++ b/locale/ko/foreman_setup.po
@@ -5,12 +5,12 @@
 # Translators:
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_setup 2.1.0\n"
+"Project-Id-Version: foreman_setup 3.0.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-08-20 09:25+0100\n"
-"PO-Revision-Date: 2014-09-16 13:21+0000\n"
-"Last-Translator: Dominic Cleal <dcleal@redhat.com>\n"
-"Language-Team: Korean (http://www.transifex.com/projects/p/foreman/language/ko/)\n"
+"PO-Revision-Date: 2015-01-21 10:56+0000\n"
+"Last-Translator: Dominic Cleal <dominic@cleal.org>\n"
+"Language-Team: Korean (http://www.transifex.com/foreman/foreman/language/ko/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
