--- a/locale/ru/foreman_setup.po
+++ b/locale/ru/foreman_setup.po
@@ -3,52 +3,53 @@
 # This file is distributed under the same license as foreman_setup.
 # 
 # Translators:
+# Vladimir Pavlov <v.pavlov@i-teco.ru>, 2015
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_setup 2.1.0\n"
+"Project-Id-Version: foreman_setup 3.0.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-08-20 09:25+0100\n"
-"PO-Revision-Date: 2014-08-20 08:30+0000\n"
-"Last-Translator: Dominic Cleal <dcleal@redhat.com>\n"
-"Language-Team: Russian (http://www.transifex.com/projects/p/foreman/language/ru/)\n"
+"PO-Revision-Date: 2015-07-03 10:51+0000\n"
+"Last-Translator: Vladimir Pavlov <v.pavlov@i-teco.ru>\n"
+"Language-Team: Russian (http://www.transifex.com/foreman/foreman/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ru\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
 msgid "Activation key"
-msgstr ""
+msgstr "Ключ активации"
 
 msgid "Activation key configuration"
-msgstr ""
+msgstr "Настройки ключа активации"
 
 msgid "Add and manage compute resources (virtualization and cloud)"
-msgstr ""
+msgstr "Просмотр и управление вычислительными ресурсами (виртуализация и облака)"
 
 msgid ""
 "All of the necessary components have been set up for provisioning support.  "
 "You can now provision new hosts by registering them from the Hosts page, "
 "then PXE-boot the server on the subnet set up earlier."
-msgstr ""
+msgstr "Вы необходимые компоненты были установлены для поддержки подготовки. Теперь Вы можете подготавливать новые узлы, регистрируя их на странице Узлы, затем просто загрузите сервер по сети, в подсети настроенной ранее."
 
 msgid ""
 "All of the necessary network information has been collected, now run the "
 "Foreman installer again with the necessary arguments to configure "
 "provisioning."
-msgstr ""
+msgstr "Вся необходимая информация о сети была собрана, запустите установку Foreman еще раз, с параметрами для настройки подготовки."
 
 msgid "Completion"
-msgstr ""
+msgstr "Завершение"
 
 msgid "Compute Resources"
 msgstr "Вычислительные ресурсы"
 
 msgid "Create and provision a new host"
-msgstr ""
+msgstr "Создать и подготовить новый узел"
 
 msgid "Create new installation medium"
-msgstr ""
+msgstr "Создать новый установочный носитель"
 
 msgid "Delete %s?"
 msgstr "Удалить %s?"
@@ -60,112 +61,112 @@ msgid "Domain|Name"
 msgstr "Имя"
 
 msgid "Edit Host Group"
-msgstr ""
+msgstr "Редактировать группу узлов"
 
 msgid "Existing medium"
-msgstr ""
+msgstr "Существующий носитель"
 
 msgid "Foreman installer"
-msgstr ""
+msgstr "Установщик Foreman"
 
 msgid "Found registered host %s"
-msgstr ""
+msgstr "Найден зарегистрированный узел %s"
 
 msgid "Found registered smart proxy %s"
-msgstr ""
+msgstr "Найден зарегистрированный капсуль %s"
 
 msgid "Host %s has at least one network interface"
-msgstr ""
+msgstr "Узел %s имеет как минимум один сетевой интерфейс"
 
 msgid "Hostname"
-msgstr ""
+msgstr "Имя узла"
 
 msgid ""
 "If installation media has already been set up, it can be selected below and "
 "the wizard will complete the necessary associations.  Otherwise use the "
 "fields below, or the Installation Media page in Foreman to add new media."
-msgstr ""
+msgstr "Если установочный носитель уже был установлен, он может быть выбран ниже и мастер добавить необходимые связи. Иначе, используйте поля ниже или страницу Установочный носитель в Foreman, для добавления нового носителя."
 
 msgid "Install provisioning with DHCP"
-msgstr ""
+msgstr "Установка подготовки с DHCP"
 
 msgid "Install provisioning without DHCP"
-msgstr ""
+msgstr "Установка подготовки без DHCP"
 
 msgid "Installation media"
 msgstr "Установочный носитель"
 
 msgid "Missing registered host %s, please ensure it is checking in"
-msgstr ""
+msgstr "Пропущен зарегистрированный узел %s, убедитесь в его регистрации"
 
 msgid "Missing registered smart proxy %s, please ensure it is registered"
-msgstr ""
+msgstr "Пропущен зарегистрированный капсуль %s, убедитесь в его регистрации"
 
 msgid "Network config"
-msgstr ""
+msgstr "Настройка сети"
 
 msgid "Network selection"
-msgstr ""
+msgstr "Выбор сети"
 
 msgid "New Host"
 msgstr "Новый узел"
 
 msgid "Next"
-msgstr ""
+msgstr "Далее"
 
 msgid "Next steps"
-msgstr ""
+msgstr "Следующий шаг"
 
 msgid "No network interfaces listed in $interfaces fact"
-msgstr ""
+msgstr "Нет сетевых интерфейсов указанных в фактах $interfaces"
 
 msgid "Normal installation media"
-msgstr ""
+msgstr "Обычный установочный носитель"
 
 msgid "Not available until pre-requisites satisified."
-msgstr ""
+msgstr "Не доступно пока предпосылки не отработаны успешно."
 
 msgid "Operating system"
 msgstr "Операционная система"
 
 msgid "Path or URL"
-msgstr ""
+msgstr "Путь или URL"
 
 msgid "Plugin for Foreman that helps set up provisioning."
-msgstr ""
+msgstr "Дополнение для Foreman, которое помогает установить подготовку."
 
 msgid "Pre-requisites"
-msgstr ""
+msgstr "Предпосылки"
 
 msgid "Provision from %s"
-msgstr ""
+msgstr "Подготовка из %s"
 
 msgid "Provisioning Setup"
 msgstr "Подготовка узлов"
 
 msgid "Provisioning host"
-msgstr ""
+msgstr "Подготовка узла"
 
 msgid "Provisioning network"
-msgstr ""
+msgstr "Подготовка сети"
 
 msgid "Provisioning setup"
-msgstr ""
+msgstr "Подготовка установки"
 
 msgid "Provisioning setup complete"
-msgstr ""
+msgstr "Подготовка установки завершена"
 
 msgid "Red Hat Satellite 5 or Spacewalk"
-msgstr ""
+msgstr "Red Hat Satellite 5 или Spacewalk"
 
 msgid "Return to the main provisioning setup page"
-msgstr ""
+msgstr "Вернуться на главную страницу подготовки установки"
 
 msgid "Review and edit the host group set up by the provisioning wizard"
-msgstr ""
+msgstr "Просмотр и редактирование набора групп узлов через мастер подготовки"
 
 msgid "Set up provisioning"
-msgstr ""
+msgstr "Установка подготовки"
 
 msgid "Smart proxy"
 msgstr "Смарт-прокси"
@@ -173,50 +174,50 @@ msgstr "Смарт-прокси"
 msgid ""
 "Some information about the location of installation media for the operating "
 "system used for provisioning is now required."
-msgstr ""
+msgstr "Теперь требуется некоторая информация о местоположении установочного носителя для операционной системы для подготовки."
 
 msgid "Spacewalk hostname is missing"
-msgstr ""
+msgstr "Имя узла Spacewalk отсутствует"
 
 msgid "Subnet"
 msgstr "Подсеть"
 
 msgid "Successfully associated OS %s."
-msgstr ""
+msgstr "Успешно связана ОС %s."
 
 msgid "Successfully updated subnet %s."
-msgstr ""
+msgstr "Подсеть %S успешно обновлена."
 
 msgid "The DNS domain name to provision hosts into"
-msgstr ""
+msgstr "Имя домена DNS для подготовки узлов в"
 
 msgid ""
 "The configuration set up is all accessible under the Infrastructure menu, "
 "e.g. Infrastructure > Subnets, and can be changed in the web interface.  You"
 " can return to this set up process through <b>Infrastructure > Provisioning "
 "Setup</b> to change settings or add new provisioning capabilities."
-msgstr ""
+msgstr "Конфигурация установки доступна в меню Инфраструктура, т.е. Инфраструктура > Подсети, и может быть изменена из веб-интерфейса. Вы можете вернуться к этому установочному процессу через <b>Infrastructure > Provisioning Setup</b> для изменения настроек или добавления новых возможностей подготовки."
 
 msgid "The following operating system will be configured for provisioning:"
-msgstr ""
+msgstr "Следующие операционные системы были настроены для подготовки:"
 
 msgid ""
 "This wizard will help set up Foreman for full host provisioning.  Before we "
 "begin, a few requirements will be verified."
-msgstr ""
+msgstr "Этот мастер поможет Вам установить Foreman для полной подготовки узлов. Перед началом будут проверены некоторые требования."
 
 msgid ""
 "To provision hosts, some configuration values are needed for the "
 "provisioning subnet attached to the Foreman server."
-msgstr ""
+msgstr "Для подготовки узлов требуются некоторые настраиваемые значения для подсети подготовки, подключенной к Foreman."
 
 msgid "Type"
 msgstr "Тип"
 
 msgid "Use an existing installation medium"
-msgstr ""
+msgstr "Использовать существующий установочный носитель"
 
 msgid ""
 "Users of Spacewalk, Red Hat Network, or Red Hat Satellite 5 should enter an "
 "appropriate activation key below, otherwise leave blank."
-msgstr ""
+msgstr "Пользователи  Spacewalk, Red Hat Network или Red Hat Satellite 5 должны ввести подтвержденный ключ активации ниже, иначе оставьте пустым."
