--- a/locale/ja/foreman_setup.po
+++ b/locale/ja/foreman_setup.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as foreman_setup.
 # 
 # Translators:
-# Shuji Yamada <uzy.exe@gmail.com>, 2015
+# 山田 修司 🍣 Shuji Yamada <uzy.exe@gmail.com>, 2015
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_setup 3.0.2\n"
+"Project-Id-Version: foreman_setup 7.0.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-08-20 09:25+0100\n"
-"PO-Revision-Date: 2015-03-25 15:12+0000\n"
-"Last-Translator: Shuji Yamada <uzy.exe@gmail.com>\n"
+"PO-Revision-Date: 2018-03-27 14:09+0000\n"
+"Last-Translator: Bryan Kearney <bryan.kearney@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/foreman/foreman/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
