--- a/locale/ko/foreman_setup.po
+++ b/locale/ko/foreman_setup.po
@@ -5,11 +5,11 @@
 # Translators:
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_setup 3.0.2\n"
+"Project-Id-Version: foreman_setup 7.0.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-08-20 09:25+0100\n"
-"PO-Revision-Date: 2015-01-21 10:56+0000\n"
-"Last-Translator: Dominic Cleal <dominic@cleal.org>\n"
+"PO-Revision-Date: 2018-01-05 19:26+0000\n"
+"Last-Translator: 0868a4d1af5275b3f70b0a6dac4c99a4\n"
 "Language-Team: Korean (http://www.transifex.com/foreman/foreman/language/ko/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -78,7 +78,7 @@ msgid "Host %s has at least one network interface"
 msgstr ""
 
 msgid "Hostname"
-msgstr ""
+msgstr "호스트 이름 "
 
 msgid ""
 "If installation media has already been set up, it can be selected below and "
@@ -111,7 +111,7 @@ msgid "New Host"
 msgstr "새 호스트"
 
 msgid "Next"
-msgstr ""
+msgstr "다음"
 
 msgid "Next steps"
 msgstr ""
