--- a/locale/pt_BR/foreman_setup.po
+++ b/locale/pt_BR/foreman_setup.po
@@ -3,15 +3,16 @@
 # This file is distributed under the same license as foreman_setup.
 # 
 # Translators:
-# luizvasconcelos <luizvasconceloss@yahoo.com.br>, 2015
-# Odilhao <odilon.junior93@gmail.com>, 2015
+# Luiz Henrique Vasconcelos <luizvasconceloss@yahoo.com.br>, 2016
+# Luiz Henrique Vasconcelos <luizvasconceloss@yahoo.com.br>, 2015
+# Odilon Junior <odilon.junior93@gmail.com>, 2015
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_setup 3.0.2\n"
+"Project-Id-Version: foreman_setup 7.0.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-08-20 09:25+0100\n"
-"PO-Revision-Date: 2015-10-08 11:29+0000\n"
-"Last-Translator: Odilhao <odilon.junior93@gmail.com>\n"
+"PO-Revision-Date: 2019-03-18 15:24+0000\n"
+"Last-Translator: Bryan Kearney <bryan.kearney@gmail.com>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/foreman/foreman/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -41,7 +42,7 @@ msgid ""
 msgstr ""
 
 msgid "Completion"
-msgstr ""
+msgstr "Conclusão"
 
 msgid "Compute Resources"
 msgstr "Recursos de computação"
@@ -80,7 +81,7 @@ msgid "Host %s has at least one network interface"
 msgstr ""
 
 msgid "Hostname"
-msgstr ""
+msgstr "Nome de máquina"
 
 msgid ""
 "If installation media has already been set up, it can be selected below and "
