--- a/locale/zh_CN/foreman_setup.po
+++ b/locale/zh_CN/foreman_setup.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as foreman_setup.
 # 
 # Translators:
+# Xingchao Yu <yuxcer@gmail.com>, 2017
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_setup 3.0.2\n"
+"Project-Id-Version: foreman_setup 7.0.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-08-20 09:25+0100\n"
-"PO-Revision-Date: 2014-08-20 08:30+0000\n"
-"Last-Translator: Dominic Cleal <dcleal@redhat.com>\n"
+"PO-Revision-Date: 2017-12-01 20:58+0000\n"
+"Last-Translator: Xingchao Yu <yuxcer@gmail.com>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/foreman/foreman/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -60,7 +61,7 @@ msgid "Domain|Name"
 msgstr "名称"
 
 msgid "Edit Host Group"
-msgstr ""
+msgstr "编辑主机组"
 
 msgid "Existing medium"
 msgstr ""
@@ -78,7 +79,7 @@ msgid "Host %s has at least one network interface"
 msgstr ""
 
 msgid "Hostname"
-msgstr ""
+msgstr "主机名"
 
 msgid ""
 "If installation media has already been set up, it can be selected below and "
@@ -102,7 +103,7 @@ msgid "Missing registered smart proxy %s, please ensure it is registered"
 msgstr ""
 
 msgid "Network config"
-msgstr ""
+msgstr "网络配置"
 
 msgid "Network selection"
 msgstr ""
@@ -111,10 +112,10 @@ msgid "New Host"
 msgstr "新建主机"
 
 msgid "Next"
-msgstr ""
+msgstr "下一项"
 
 msgid "Next steps"
-msgstr ""
+msgstr "下一步"
 
 msgid "No network interfaces listed in $interfaces fact"
 msgstr ""
