--- a/locale/zh_TW/foreman_setup.po
+++ b/locale/zh_TW/foreman_setup.po
@@ -5,11 +5,11 @@
 # Translators:
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_setup 3.0.2\n"
+"Project-Id-Version: foreman_setup 7.0.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-08-20 09:25+0100\n"
-"PO-Revision-Date: 2014-08-20 08:30+0000\n"
-"Last-Translator: Dominic Cleal <dcleal@redhat.com>\n"
+"PO-Revision-Date: 2018-03-27 15:20+0000\n"
+"Last-Translator: Bryan Kearney <bryan.kearney@gmail.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/foreman/foreman/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -78,7 +78,7 @@ msgid "Host %s has at least one network interface"
 msgstr ""
 
 msgid "Hostname"
-msgstr ""
+msgstr "主機名稱"
 
 msgid ""
 "If installation media has already been set up, it can be selected below and "
@@ -111,7 +111,7 @@ msgid "New Host"
 msgstr "新增主機"
 
 msgid "Next"
-msgstr ""
+msgstr "下一個"
 
 msgid "Next steps"
 msgstr ""
